EXTRA_DIST=CMakeLists.txt

# Docs
#
dist_doc_DATA=$(PHREEQCRM_DOCS)

PHREEQCRM_DOCS=\
	AbstractAWR.pdf\
	NOTICE.TXT\
	Phreeqc_2_1999_manual.pdf\
	Phreeqc_3_2013_manual.pdf\
	README.TXT

sourcedir=$(docdir)/src

dist_source_DATA=$(PHREEQCRM_SOURCE)

PHREEQCRM_SOURCE=\
	${top_srcdir}/src/RM_interface.F90\
	${top_srcdir}/src/IPhreeqcPhast/IPhreeqc/IPhreeqc_interface.F90
